Character Card Background Alignment Bug Fix

--- a/front-end/src/pages/Characters/CharactersGroup/CharactersGroupCharacterCards/CharactersGroupCharacterCard/CharactersGroupCharacterCard.css
+++ b/front-end/src/pages/Characters/CharactersGroup/CharactersGroupCharacterCards/CharactersGroupCharacterCard/CharactersGroupCharacterCard.css
@@ -174,6 +174,7 @@
 
 .characters-group-character-card-background {
 	height: 100%;
+	overflow: visible;
 }
 
 .characters-group-character-card-background-alignment {
@@ -186,10 +187,11 @@
 	display: flex;
 	border-radius: inherit;
 	width: 100%;
-	height: 100%;
+	/* height: 100%;
 	min-height: var(--characterCardHeight);
-	object-fit: cover;
+	object-fit: cover; */
 	overflow: visible;
+	transform-origin: top;
 }
 
 .characters-group-character-card-background-alignment-top-left {
